<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">AnswerLiuPro</string>

    <!-- 底部导航 -->
    <string name="home_tab_product">产品超市</string>
    <string name="home_tab_loan">贷款</string>
    <string name="home_tab_raiders">攻略</string>
    <string name="home_tab_card">信用卡</string>
    <string name="home_tab_mine">我的</string>
    <string name="home_tab_information">消息</string>
    <string name="home_tab_home">首页</string>
    <string name="home_tab_home_2">产品大全</string>
    <string name="home_tab_accurate">精准</string>

    <!-- 联系我们 -->
    <string name="tel_num" tools:ignore="TypographyDashes">400-862-2287</string>
    <string name="cancel">取消</string>
    <string name="call">呼叫</string>

    <!-- 空布局 -->
    <string name="error_view_click_to_refresh">点击屏幕,重新加载</string>
    <string name="error_view_no_data">暂无内容\r\n点击重新加载</string>
    <string name="error_view_no_login">请登录\r\n点击前往登录</string>
    <string name="error_view_loading">加载中…</string>
    <string name="error_view_load_error_click_to_refresh">内容加载失败\r\n点击重新加载</string>
    <string name="error_view_network_error_click_to_refresh">没有可用的网络\r\n点击重新加载</string>
    <string name="error_view_load">加载出错了</string>
    <string name="error_loading">内容加载失败…</string>
    <string name="loading_no_more">已加载全部</string>

    <!-- 我的 -->
    <string name="quit_login">退出登录</string>
    <string name="apply_record">申请记录</string>
    <string name="about_us">关于我们</string>
    <string name="contact_us">联系我们</string>
    <string name="version_num">版本号</string>
    <string name="personal_information">个人信息</string>

    <!-- 产品详情 -->
    <string name="rate_explain">利率说明</string>
    <string name="apply_condition">申请条件</string>
    <string name="apply_material">申请材料</string>
    <string name="apply_flow">申请流程</string>

    <!-- 登录 -->
    <string name="phone_num">手机号</string>
    <string name="ed_phone_remarks">请输入手机号</string>
    <string name="code_num">验证码</string>
    <string name="ed_code_remarks">请输入验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="code_remarks">最新短信验证码可直接用于登录</string>
    <string name="login">登 录</string>
    <string name="agree">同意</string>
    <string name="registration_protocol">《注册协议》</string>


    <!-- 其他 -->
    <string name="quit_login_str">您真的要退出登录吗？</string>
    <string name="confirm">确定</string>
    <string name="loan_market">贷款商场</string>
    <string name="repayment_term">还款期限</string>
    <string name="unit_money">每期应还</string>
    <string name="horn_">¥  </string>
    <string name="loan_money">贷款金额</string>
    <string name="job_choose">选择职业</string>
    <string name="search">搜 索</string>
    <string name="information_center">消息中心</string>
    <string name="loan_time">贷款期限</string>
    <string name="loan_type">贷款类型</string>
    <string name="loan_tips_str">温馨提示:同时申请多个贷款,可以有效提高放款成功率!</string>
    <string name="quota_range">额度范围</string>
    <string name="time_range">期限范围</string>
    <string name="see_information">查看详情</string>
    <string name="basic_info">基本信息</string>
    <string name="job_info">职业信息</string>
    <string name="credit_info">信用信息</string>
    <string name="name">姓名</string>
    <string name="please_input">请输入</string>
    <string name="id_num">身份证号</string>
    <string name="census">户籍</string>
    <string name="please_choose">请选择</string>
    <string name="address">现居地</string>
    <string name="next">下一步</string>
    <string name="education_level">教育程度</string>
    <string name="society_identity">社会身份</string>
    <string name="income">收入/月</string>
    <string name="is_social_security">有无社保</string>
    <string name="is_accumulation_fund">有无公积金</string>
    <string name="is_credit_card">有无信用卡</string>
    <string name="is_loan">有无房/车贷</string>
    <string name="wlded">微信微粒贷额度</string>
    <string name="zfbzmxyf">支付宝芝麻信用分</string>
    <string name="go_loan">去贷款</string>
    <string name="synthesize_index">综合指数</string>
    <string name="loan_strategy">贷款攻略</string>
    <string name="immediately_loan">立即借款</string>
    <string name="immediately_experience">立即体验</string>
    <string name="immediately_apply">立即申请</string>
    <string name="page_view">浏览量</string>
    <string name="again_apply">再次申请</string>
    <string name="dydk">抵押贷款</string>
    <string name="gxdk">工薪贷款</string>
    <string name="xydk">信用贷款</string>
    <string name="xesd">小额速贷</string>
    <string name="product_recommend">产品推荐</string>
    <string name="loan_money_yuan">借款金额(元)</string>
    <string name="new_strategy">最新攻略</string>
    <string name="mine_account">我的账户</string>
    <string name="ss">——</string>
    <string name="total_service_num">累计服务人数</string>
    <string name="total_loan_money">累计贷款金额</string>
    <string name="loan_success_rate">下款成功率</string>
    <string name="more">更多></string>

    <string name="serve_clause">服务条款</string>
    <string name="pro_title">title</string>
    <string name="clause_1">1.</string>
    <string name="clause_2">2.</string>
    <string name="clause_3">3.</string>
    <string name="clause_4">4.</string>
    <string name="clause_5">5.</string>
    <string name="clause_6">6.</string>
    <string name="clause_7">7.</string>
    <string name="clause_8">8.</string>
    <string name="clause_9">9.</string>
    <string name="about_us_text">111</string>

    <string name="about_bottom">Copyright@中鼎国泰（北京）金融外包服务有限公司 ALL Rights Reserved</string>

</resources>
