<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        style="@style/MatchMatch.Vertical">

        <include layout="@layout/local_top_view"/>

        <!--手机号-->
        <RelativeLayout
            style="@style/MatchWrap"
            android:layout_marginTop="16dp">

            <ImageView
                android:id="@+id/iv1"
                style="@style/WrapWrap"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:background="@mipmap/icon_phone"
                tools:ignore="ContentDescription"/>

            <TextView
                android:id="@+id/tv1"
                style="@style/WrapWrap"
                android:layout_centerVertical="true"
                android:layout_marginStart="6dp"
                android:layout_toRightOf="@+id/iv1"
                android:text="@string/phone_num"
                android:textSize="16sp"
                android:typeface="serif"
                tools:ignore="RtlHardcoded"/>

            <com.pingxundata.answerliu.pxcore.view.ClearEditText
                android:id="@+id/ed_phone"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="10dp"
                android:layout_toRightOf="@+id/tv1"
                android:background="@null"
                android:hint="@string/ed_phone_remarks"
                android:inputType="number"
                android:maxLength="11"
                android:singleLine="true"
                android:textColorHint="#CCCCCC"
                android:textCursorDrawable="@null"
                tools:ignore="RtlHardcoded"/>
        </RelativeLayout>

        <include layout="@layout/line_vertical_1dp"/>

        <!--验证码-->
        <RelativeLayout
            style="@style/MatchWrap"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/iv2"
                style="@style/WrapWrap"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:background="@mipmap/icon_vico"
                tools:ignore="ContentDescription"/>

            <TextView
                android:id="@+id/tv2"
                style="@style/WrapWrap"
                android:layout_centerVertical="true"
                android:layout_marginStart="6dp"
                android:layout_toRightOf="@+id/iv2"
                android:text="@string/code_num"
                android:textSize="16sp"
                android:typeface="serif"
                tools:ignore="RtlHardcoded"/>

            <EditText
                android:id="@+id/ed_code"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginEnd="26dp"
                android:layout_marginStart="10dp"
                android:layout_toRightOf="@+id/tv2"
                android:background="@null"
                android:hint="@string/ed_code_remarks"
                android:inputType="number"
                android:maxLength="6"
                android:singleLine="true"
                android:textColorHint="#CCCCCC"
                android:textCursorDrawable="@null"
                tools:ignore="RtlHardcoded"/>

            <TextView
                android:id="@+id/tv_get_code"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:text="@string/get_code"
                android:textColor="@color/blue_deep"
                android:textSize="16sp"
                tools:ignore="RelativeOverlap"/>
        </RelativeLayout>

        <include layout="@layout/line_vertical_1dp"/>

        <LinearLayout
            style="@style/WrapWrap"
            android:layout_marginTop="10dp">

            <TextView
                style="@style/WrapWrap"
                android:layout_marginStart="20dp"
                android:text="@string/code_remarks"
                android:textSize="12sp"/>
        </LinearLayout>

        <!--登录-->
        <LinearLayout
            style="@style/MatchWrap"
            android:layout_marginTop="10dp"
            android:gravity="center|center_horizontal|center_vertical">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/shap_login"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:typeface="serif"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:gravity="center|center_horizontal|center_vertical">

            <LinearLayout
                style="@style/WrapWrap">

                <ImageView
                    android:id="@+id/iv_choose"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_weight="1"
                    android:background="@mipmap/icon_agree_yes"
                    android:gravity="right"
                    tools:ignore="ContentDescription,RtlHardcoded"/>

                <TextView
                    style="@style/WrapWrap"
                    android:layout_gravity="center"
                    android:layout_marginStart="6dp"
                    android:layout_weight="1"
                    android:text="@string/agree"
                    android:textSize="16sp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tv_agreement"
                style="@style/WrapMatch">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/registration_protocol"
                    android:textColor="@color/blue_deep"
                    android:textSize="16sp"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</layout>