<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">


    <FrameLayout
        style="@style/MatchMatch.Vertical"
        android:background="@color/white"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <LinearLayout
            style="@style/MatchWrap.Vertical">


            <RelativeLayout
                style="@style/MatchWrap"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/tab_font_bright"
                android:fitsSystemWindows="true">

                <RelativeLayout
                    android:id="@+id/iv_topview_back"
                    android:layout_width="50dp"
                    android:layout_height="match_parent">

                    <ImageView
                        style="@style/WrapWrap"
                        android:layout_marginStart="10dp"
                        android:layout_centerVertical="true"
                        android:background="@mipmap/icon_back"
                        tools:ignore="ContentDescription"/>

                </RelativeLayout>


                <TextView
                    android:id="@+id/tv_topview_title"
                    style="@style/WrapWrap"
                    android:layout_centerInParent="true"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    tools:text="设置标题"/>

                <RelativeLayout
                    android:id="@+id/iv_share"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true">

                    <ImageView
                        style="@style/WrapWrap"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:background="@mipmap/icon_share"
                        tools:ignore="ContentDescription"/>

                </RelativeLayout>


            </RelativeLayout>

            <ScrollView
                style="@style/MatchMatch"
                android:layout_marginBottom="70dp">

                <LinearLayout
                    android:id="@+id/parent_view"
                    style="@style/MatchMatch.Vertical"
                    android:paddingTop="10dp"
                    android:visibility="visible">

                    <RelativeLayout
                        style="@style/WrapWrap"
                        android:layout_marginStart="10dp">

                        <ImageView
                            android:id="@+id/iv_product"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:layout_marginBottom="10dp"
                            android:layout_marginEnd="10dp"
                            android:scaleType="fitXY"
                            tools:ignore="ContentDescription"/>

                        <TextView
                            android:id="@+id/tv_title"
                            style="@style/WrapWrap"
                            android:layout_marginTop="10dp"
                            android:layout_toRightOf="@+id/iv_product"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            tools:ignore="RtlHardcoded"
                            tools:text="产品名称"/>

                        <TextView
                            android:id="@+id/tv_quota"
                            style="@style/WrapWrap"
                            android:layout_below="@+id/tv_title"
                            android:layout_marginTop="8dp"
                            android:layout_toRightOf="@+id/iv_product"
                            tools:ignore="RtlHardcoded"
                            tools:text="额度范围"/>

                        <TextView
                            android:id="@+id/tv_time"
                            style="@style/WrapWrap"
                            android:layout_below="@+id/tv_quota"
                            android:layout_marginTop="5dp"
                            android:layout_toRightOf="@+id/iv_product"
                            tools:ignore="RtlHardcoded"
                            tools:text="额度期限"/>

                        <TextView
                            android:id="@+id/tv_speed"
                            style="@style/WrapWrap"
                            android:layout_below="@+id/tv_time"
                            android:layout_marginTop="5dp"
                            android:layout_toRightOf="@+id/iv_product"
                            tools:ignore="RtlHardcoded"
                            tools:text="最快放款"/>
                    </RelativeLayout>

                    <include layout="@layout/line_vertical_10dp"/>


                    <!--利率说明-->
                    <LinearLayout
                        style="@style/MatchWrap.Vertical"
                        android:paddingBottom="20dp"
                        android:paddingStart="10dp"
                        android:paddingTop="10dp"
                        tools:ignore="RtlSymmetry">

                        <LinearLayout
                            style="@style/WrapWrap.Horizontal">

                            <ImageView
                                android:layout_width="10dp"
                                android:layout_height="10dp"
                                android:layout_gravity="center"
                                android:background="@mipmap/red_point"
                                tools:ignore="ContentDescription"/>

                            <TextView
                                style="@style/WrapWrap"
                                android:layout_marginStart="10dp"
                                android:text="@string/rate_explain"
                                android:textColor="@color/black"
                                android:textSize="16sp"
                                tools:ignore="RtlHardcoded"/>
                        </LinearLayout>


                        <TextView
                            android:id="@+id/tv_rate_explain"
                            style="@style/WrapWrap"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="6dp"
                            tools:ignore="RtlHardcoded"
                            tools:text="利率说明123123132132l"/>

                    </LinearLayout>

                    <include layout="@layout/line_vertical_1dp"/>

                    <!--申请流程-->
                    <LinearLayout
                        style="@style/MatchWrap.Vertical"
                        android:paddingBottom="20dp"
                        android:paddingStart="10dp"
                        android:paddingTop="10dp"
                        tools:ignore="RtlSymmetry">

                        <LinearLayout
                            style="@style/WrapWrap.Horizontal">

                            <ImageView
                                android:layout_width="10dp"
                                android:layout_height="10dp"
                                android:layout_gravity="center"
                                android:background="@mipmap/red_point"
                                tools:ignore="ContentDescription"/>

                            <TextView
                                style="@style/WrapWrap"
                                android:layout_marginStart="10dp"
                                android:text="@string/apply_flow"
                                android:textColor="@color/black"
                                android:textSize="16sp"
                                tools:ignore="RtlHardcoded"/>

                        </LinearLayout>


                        <TextView
                            android:id="@+id/tv_process"
                            style="@style/WrapWrap"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="6dp"
                            tools:ignore="RtlHardcoded"
                            tools:text="利率说明1231231321321"/>

                    </LinearLayout>

                    <include layout="@layout/line_vertical_1dp"/>
                    <!--申请条件-->
                    <LinearLayout
                        style="@style/MatchWrap.Vertical"
                        android:paddingBottom="20dp"
                        android:paddingStart="10dp"
                        android:paddingTop="10dp"
                        tools:ignore="RtlSymmetry">

                        <LinearLayout
                            style="@style/WrapWrap.Horizontal">

                            <ImageView
                                android:layout_width="10dp"
                                android:layout_height="10dp"
                                android:layout_gravity="center"
                                android:background="@mipmap/red_point"
                                tools:ignore="ContentDescription"/>

                            <TextView
                                style="@style/WrapWrap"
                                android:layout_marginStart="10dp"
                                android:text="@string/apply_condition"
                                android:textColor="@color/black"
                                android:textSize="16sp"
                                tools:ignore="RtlHardcoded"/>

                        </LinearLayout>


                        <TextView
                            android:id="@+id/tv_condition"
                            style="@style/WrapWrap"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="6dp"
                            tools:ignore="RtlHardcoded"
                            tools:text="利率说明1231231321321"/>

                    </LinearLayout>

                    <include layout="@layout/line_vertical_1dp"/>

                    <!--申请材料-->
                    <LinearLayout
                        style="@style/MatchWrap.Vertical"
                        android:paddingBottom="20dp"
                        android:paddingStart="10dp"
                        android:paddingTop="10dp"
                        tools:ignore="RtlSymmetry">

                        <LinearLayout
                            style="@style/WrapWrap.Horizontal">

                            <ImageView
                                android:layout_width="10dp"
                                android:layout_height="10dp"
                                android:layout_gravity="center"
                                android:background="@mipmap/red_point"
                                tools:ignore="ContentDescription"/>

                            <TextView
                                style="@style/WrapWrap"
                                android:layout_marginStart="10dp"
                                android:text="@string/apply_material"
                                android:textColor="@color/black"
                                android:textSize="16sp"
                                tools:ignore="RtlHardcoded"/>

                        </LinearLayout>


                        <TextView
                            android:id="@+id/tv_datum"
                            style="@style/WrapWrap"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="6dp"
                            tools:ignore="RtlHardcoded"
                            tools:text="利率说明1231231321321"/>

                    </LinearLayout>

                    <include layout="@layout/line_vertical_1dp"/>

                </LinearLayout>
            </ScrollView>

        </LinearLayout>

        <!--借款按钮-->
        <LinearLayout
            style="@style/MatchWrap"
            android:layout_gravity="bottom"
            android:padding="10dp">

            <Button
                android:id="@+id/btn_enter"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/shap_login"
                android:text="@string/immediately_loan"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:typeface="serif"/>

        </LinearLayout>

        <com.pingxundata.answerliu.pxcore.view.EmptyLayout
            android:id="@+id/empty_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="60dp"
            android:visibility="gone"/>

    </FrameLayout>
</layout>